# ChangeLog for net-misc/oidentd
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/oidentd/ChangeLog,v 1.61 2013/05/11 17:43:31 angelos Exp $

  11 May 2013; Christoph Mende <angelos@gentoo.org> oidentd-2.0.8-r4.ebuild:
  Update HOMEPAGE

  09 Apr 2013; Christoph Mende <angelos@gentoo.org> -oidentd-2.0.8-r3.ebuild:
  Remove old

  30 Sep 2012; Raúl Porcel <armin76@gentoo.org> oidentd-2.0.8-r4.ebuild:
  alpha/ia64/s390/sh/sparc stable wrt #433339

  23 Sep 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> oidentd-2.0.8-r4.ebuild:
  x86 stable wrt bug #433339

  08 Sep 2012; Agostino Sarubbo <ago@gentoo.org> oidentd-2.0.8-r4.ebuild:
  Stable for amd64, wrt bug #433339

  07 Sep 2012; Jeroen Roovers <jer@gentoo.org> oidentd-2.0.8-r4.ebuild:
  Stable for HPPA (bug #433339).

  02 Sep 2012; Anthony G. Basile <blueness@gentoo.org> oidentd-2.0.8-r4.ebuild:
  Stable arm, bug #433339

  02 Sep 2012; Anthony G. Basile <blueness@gentoo.org> oidentd-2.0.8-r4.ebuild:
  Stable ppc, bug #433339

*oidentd-2.0.8-r4 (16 Jul 2012)

  16 Jul 2012; Christoph Mende <angelos@gentoo.org> +files/oidentd.service,
  +files/oidentd.socket, +oidentd-2.0.8-r4.ebuild:
  Install systemd unit files from ArchLinux by Bartłomiej Piotrowski (bug
  #413605)

  22 Jun 2010; Jeroen Roovers <jer@gentoo.org> oidentd-2.0.8-r3.ebuild:
  Stable for HPPA (bug #320931).

  19 Jun 2010; Raúl Porcel <armin76@gentoo.org> oidentd-2.0.8-r3.ebuild:
  alpha/arm/ia64/s390/sh/sparc stable wrt #320931

  01 Jun 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  oidentd-2.0.8-r3.ebuild:
  x86 stable wrt bug #320931

  26 May 2010; Pacho Ramos <pacho@gentoo.org> oidentd-2.0.8-r3.ebuild:
  stable amd64, bug 320931

  24 May 2010; <nixnut@gentoo.org> oidentd-2.0.8-r3.ebuild:
  ppc stable #320931

*oidentd-2.0.8-r3 (21 Mar 2010)

  21 Mar 2010; <angelos@gentoo.org> +oidentd-2.0.8-r3.ebuild,
  +files/oidentd-2.0.8-bind-to-ipv6-too.patch: