@@ -1,8 +1,9 @@
 [Unit]
-Description=Ident (RFC 1413) per-connection server
+Description=TCP/IP IDENT protocol server
 
 [Service]
-ExecStart=/usr/sbin/oidentd -I -u nobody -g nobody
+ExecStart=/usr/sbin/oidentd -i -S -u nobody -g nobody
 ExecReload=/bin/kill -HUP $MAINPID
-StandardInput=socket
-StandardError=syslog
+
+[Install]
+WantedBy=multi-user.target
